--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,6 @@
       "19": "icon19.png"
     },
     "default_popup": "index.html"
-  }
+  },
+ "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
