--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,8 @@
-{ 
-  "name": "CryptoViewer",
-  "version": "0.0.1",
-  "manifest_version": 2,
-  "description": "仮想通貨の保有資産を管理",
+{
   "browser_action": {
-    "default_icon": {
-      "19": "icon19.png"
-    },
-    "default_popup": "index.html"
-  },
- "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+        "default_icon": {
+            "19": "icon19.png"
+        },
+        "default_popup": "popup.html"
+}
 }
