--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,10 @@
     },
     "default_popup": "index.html" 
   },
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+  "permissions": [
+    "https://api.zaif.jp/*",
+    "https://api.binance.com/*"
+  ]
 }
  
