--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 { 
   "name": "CryptoViewer",
-  "version": "0.0.1",
+  "version": "1.0",
   "manifest_version": 2,
-  "description": "仮想通貨の保有資産を管理",
+  "description": "仮想通貨のレートを確認",
   "browser_action": {
     "default_icon": {
       "19": "icon19.png"
